# forest-monitoring-template

./: .env.example  README.md  main.ipynb  pyproject.toml  requirements.txt  spai.config.json  spai.config.yaml  spai.vars.json  template.json
apis/analytics/: main.py  requirements.txt
apis/api/: main.py  requirements.txt
apis/xyz/: main.py  requirements.txt
notebooks/analytics/: main.ipynb  output.ipynb  requirements.txt
scripts/: main.py
scripts/downloader/: .env.example  main.py  requirements.txt
scripts/forest-monitoring/: main.py  requirements.txt
scripts/ndvi/: main.py  requirements.txt
uis/map/: .env  .gitignore  jsconfig.json  main.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  svelte.config.js  vite.config.js
uis/map/src/: app.html
uis/map/src/components/: Analytics.svelte  Timeline.svelte
uis/map/src/components/analytics/: ForestMonitoring.svelte  MockButton.svelte  MockQuality.svelte  Timeline.svelte  VegetationButton.svelte  VegetationQuality.svelte
uis/map/src/components/map/: DateSelector.svelte  GeoJSONLayer.svelte  ImageLayer.svelte  LayersControl.svelte  Map.svelte  Slider.svelte
uis/map/src/components/viz/: Chart.svelte  Lines.svelte  Pie.svelte
uis/map/src/lib/map/lsbs/: leaflet-side-by-side.js
uis/map/src/routes/: +layout.svelte  +page.server.js  +page.svelte
uis/map/src/stores/: analytics.js
uis/map/src/stores/map/: GeoJSONLayers.js  imageLayers.js  map.js  selectedAnalysis.js  selectedAnalytics.js
uis/map/src/styles/: app.css
